<resources>
    <string name="app_name">Lesson7-1</string>
    <string name="single_1">Single 1</string>
    <string name="single_2">Single 2</string>
    <string name="single_3">Single 3</string>
    <string name="normal_1">normal 1</string>
    <string name="normal_2">normal 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
